--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="buttonmain">
                     <button onclick="window.location.href='https://are2is.github.io/Bewerbung/';">Zurück zur Hauptseite</button>
                 </div>
-                <h2 class="Quellcode">Den Quellcode finden Sie auf der GitHub-Seite unter diesem <a href="https://github.com/DEIN-GITHUB-REPOSITORY-LINK" target="_blank">Link</a></h2>
+                <h2 class="Quellcode">Den Quellcode finden Sie auf der GitHub-Seite unter diesem <a href="https://github.com/Are2is/CSS-Projekt" target="_blank">Link</a></h2>
                 <div class="image-container">
                     <img src="CSS-Gestaltung und Layout/imgs/img1.jpg" alt="Bild 1">
                     <img src="CSS-Gestaltung und Layout/imgs/img2.jpg" alt="Bild 2">
