--- a/index.html
+++ b/index.html
@@ -58,10 +58,15 @@
     </main>
 
     <footer>
-        <p class="datenschutztext">Willkommen auf meiner Homepage! Hier sind alle Daten sicher – vor allem deine, weil ich keine speichere!<br>
-            Es gibt keine Cookies, die deinen Browser verfolgen, keine geheime Datenbank, die dich ausspioniert, und,<br>
-            ganz ehrlich, keine Ahnung, was Datenschutz überhaupt genau ist.<br>
-            Falls du trotzdem besorgt bist, schau einfach weiter und genieße die Seiten ohne jegliche Datenangst!</p>
+        <p class="pfooter">
+            <strong>Impressum:</strong><br><br>
+            Aristeidis Kokas<br>
+            Schumacherstraße 21<br>
+            76275 Ettlingen, Deutschland<br><br>
+            <strong>Kontakt:</strong><br><br>
+            E-Mail: ariskokas0112@gmail.com<br>
+            Telefon: +49 176 84304378<br>
+        </p>
 
         <p><a class="footerSchrift" href="https://www.instagram.com/are2is/">©2025 von Aristeidis Kokas</a></p>
     </footer>
