--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img src="CSS-Gestaltung und Layout/imgs/img3.jpg" alt="Bild 3">
                 </div>
                 <div class="containerAricletext">
-                    <h2 class="sliding-text">Hallo, mein Name ist <strong>Aristeidis Kokas</strong> und dies ist mein CSS-Projekt, das ich im Rahmen meiner Ausbildung zum Fachinformatiker für Anwendungsentwicklung entwickelt habe. In diesem Projekt zeige ich, wie ich mit CSS moderne und funktionale Benutzeroberflächen für Webanwendungen erstelle. Mein Ziel war es, das Design ansprechend und benutzerfreundlich zu gestalten und dabei die Grundlagen der responsiven Gestaltung zu berücksichtigen, sodass die Anwendung auf verschiedenen Geräten gut funktioniert. Dieses Projekt ist ein wichtiger Meilenstein auf meinem Weg als Anwendungsentwickler und zeigt mein Verständnis für die Gestaltung und Optimierung von Webanwendungen mit modernen Technologien.</h2>
+                                        <h2 class="sliding-text">Hallo, mein Name ist <strong>Aristeidis Kokas</strong> und dies ist mein CSS-Projekt, das ich im Rahmen meiner Ausbildung zum Fachinformatiker für Anwendungsentwicklung entwickelt habe. In diesem Projekt zeige ich, wie ich mit CSS moderne und funktionale Benutzeroberflächen für Webanwendungen erstelle. Mein Ziel war es, das Design ansprechend und benutzerfreundlich zu gestalten. Dieses Projekt stellt einen wichtigen Meilenstein auf meinem Weg als Anwendungsentwickler dar und zeigt mein Verständnis für die Gestaltung und Optimierung von Webanwendungen mit modernen Technologien.</h2>
                 </div>
             </article>
         </div>
