--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="meinehobbys">Meine Hobbys</h2>
             <ul> 
                 <li>Programmieren</li>
-                <li>Bodybuilding</li>
+                <li>Fittnesstraining</li>
                 <li>Lesen</li>
             </ul>
         </section>
